--- a/Broker/package.json
+++ b/Broker/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "nodemon": "^1.9.2",
+    "path": "^0.12.7",
     "router": "^1.1.4",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.6"
